--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,179 +11,189 @@
         android:id="@+id/tvtitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        android:paddingLeft="420dp"
+        android:gravity="center"
         android:text="投影设置"
         android:textColor="@color/black"
-        android:textSize="30sp"
+        android:textSize="@dimen/main_title_textSize"
         android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="@dimen/main_title_marginTop"/>
 
 
     <LinearLayout
-        android:layout_width="500dp"
+        android:id="@+id/list"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_marginStart="220dp"
-        android:layout_marginTop="32dp"
         android:gravity="center"
         android:orientation="vertical"
+        android:layout_marginTop="@dimen/main_title_marginTop"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvtitle">
 
         <RelativeLayout
             android:id="@+id/trapezoidal_double_point"
-            android:layout_width="400dp"
-            android:layout_height="60dp"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
             android:background="@drawable/test"
-            android:focusable="true">
+            android:focusable="true"
+            android:gravity="center_vertical"
+            android:layout_weight="1">
 
             <ImageView
                 android:id="@+id/iv_trapezoidal_double_point"
-                android:layout_width="100dp"
-                android:layout_height="50dp"
-                android:layout_marginTop="5dp"
+                android:layout_width="@dimen/main_iv_width"
+                android:layout_height="@dimen/main_iv_height"
+                android:scaleType="fitCenter"
+                android:layout_marginTop="@dimen/main_iv_marginTop"
+                android:padding="@dimen/main_iv_padding"
                 android:src="@drawable/icon_trapezoidal_double_point" />
 
             <TextView
                 android:id="@+id/tv_trapezoidal_double_point"
                 android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:paddingTop="13dp"
+                android:layout_height="@dimen/main_tv_height"
                 android:layout_toRightOf="@+id/iv_trapezoidal_double_point"
+                android:gravity="center_vertical"
                 android:text="两点梯形校正"
                 android:textColor="@color/black"
-                android:textSize="20sp"
+                android:textSize="@dimen/main_tv_textSize"
                 android:textStyle="bold" />
 
             <ImageView
                 android:id="@+id/arrow_trapezoidal_double_point"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginStart="350dp"
-                android:layout_marginTop="15dp"
-                android:src="@drawable/arrow"/>
+                android:layout_width="@dimen/main_arrow_width"
+                android:layout_height="@dimen/main_arrow_height"
+                android:layout_marginStart="@dimen/main_arrow_marginStart"
+                android:layout_marginTop="@dimen/main_arrow_marginTop"
+                android:src="@drawable/arrow" />
         </RelativeLayout>
 
         <RelativeLayout
             android:id="@+id/trapezoidal_single_point"
-            android:layout_width="400dp"
-            android:layout_height="60dp"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
             android:background="@drawable/test"
             android:focusable="true"
-            android:layout_marginTop="20dp">
+            android:layout_weight="1"
+            android:layout_marginTop="@dimen/main_RL_marginTop">
 
             <ImageView
                 android:id="@+id/iv_trapezoidal_single_point"
-                android:layout_width="100dp"
-                android:layout_height="50dp"
-                android:layout_marginTop="5dp"
+                android:layout_width="@dimen/main_iv_width"
+                android:layout_height="@dimen/main_iv_height"
+                android:layout_marginTop="@dimen/main_iv_marginTop"
+                android:padding="@dimen/main_iv_padding"
                 android:src="@drawable/icon_trapezoidal_single_point" />
 
             <TextView
                 android:id="@+id/tv_trapezoidal_single_point"
                 android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:paddingTop="13dp"
+                android:layout_height="@dimen/main_tv_height"
                 android:layout_toRightOf="@+id/iv_trapezoidal_single_point"
+                android:gravity="center_vertical"
                 android:text="四点梯形校正"
                 android:textColor="@color/black"
-                android:textSize="20sp"
+                android:textSize="@dimen/main_tv_textSize"
                 android:textStyle="bold" />
 
             <ImageView
                 android:id="@+id/arrow_trapezoidal_single_point"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginStart="350dp"
-                android:layout_marginTop="15dp"
-                android:src="@drawable/arrow"/>
+                android:layout_width="@dimen/main_arrow_width"
+                android:layout_height="@dimen/main_arrow_height"
+                android:layout_marginStart="@dimen/main_arrow_marginStart"
+                android:layout_marginTop="@dimen/main_arrow_marginTop"
+                android:src="@drawable/arrow" />
         </RelativeLayout>
 
 
         <RelativeLayout
             android:id="@+id/size"
-            android:layout_width="400dp"
-            android:layout_height="60dp"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
             android:background="@drawable/test"
             android:focusable="true"
-            android:layout_marginTop="20dp">
+            android:layout_weight="1"
+            android:layout_marginTop="@dimen/main_RL_marginTop">
 
             <ImageView
                 android:id="@+id/iv_size"
-                android:layout_width="100dp"
-                android:layout_height="50dp"
-                android:layout_marginTop="5dp"
+                android:layout_width="@dimen/main_iv_width"
+                android:layout_height="@dimen/main_iv_height"
                 android:layout_alignParentLeft="true"
+                android:layout_marginTop="@dimen/main_iv_marginTop"
+                android:padding="@dimen/main_iv_padding"
                 android:src="@drawable/icon_size_color" />
 
             <TextView
                 android:id="@+id/tv_size"
                 android:layout_width="wrap_content"
-                android:layout_height="50dp"
+                android:layout_height="@dimen/main_tv_height"
                 android:layout_toRightOf="@+id/iv_size"
+                android:gravity="center_vertical"
                 android:text="尺寸调节"
-                android:paddingTop="13dp"
                 android:textColor="@color/black"
-                android:textSize="20sp"
+                android:textSize="@dimen/main_tv_textSize"
                 android:textStyle="bold" />
 
             <ImageView
                 android:id="@+id/arrow_size"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginStart="350dp"
-                android:layout_marginTop="15dp"
-                android:src="@drawable/arrow"/>
+                android:layout_width="@dimen/main_arrow_width"
+                android:layout_height="@dimen/main_arrow_height"
+                android:layout_marginStart="@dimen/main_arrow_marginStart"
+                android:layout_marginTop="@dimen/main_arrow_marginTop"
+                android:src="@drawable/arrow" />
         </RelativeLayout>
 
         <RelativeLayout
             android:id="@+id/projection"
-            android:layout_width="400dp"
-            android:layout_height="60dp"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
             android:background="@drawable/test"
             android:focusable="true"
-            android:layout_marginTop="20dp">
+            android:layout_weight="1"
+            android:layout_marginTop="@dimen/main_RL_marginTop">
 
             <ImageView
                 android:id="@+id/iv_projection"
-                android:layout_width="100dp"
-                android:layout_height="50dp"
-                android:layout_marginTop="5dp"
+                android:layout_width="@dimen/main_iv_width"
+                android:layout_height="@dimen/main_iv_height"
                 android:layout_alignParentLeft="true"
+                android:layout_marginTop="@dimen/main_iv_marginTop"
+                android:padding="@dimen/main_iv_padding"
                 android:src="@drawable/icon_projection_color" />
 
             <TextView
                 android:id="@+id/tv_projection"
                 android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:paddingTop="13dp"
+                android:layout_height="@dimen/main_tv_height"
                 android:layout_toRightOf="@+id/iv_projection"
+                android:gravity="center_vertical"
                 android:text="投影方式"
                 android:textColor="@color/black"
-                android:textSize="20sp"
+                android:textSize="@dimen/main_tv_textSize"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/tv_projection_small"
                 android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:paddingTop="18dp"
-                android:layout_marginLeft="90dp"
+                android:layout_height="@dimen/main_tv_height"
+                android:layout_marginLeft="@dimen/main_tv_marginLeft"
                 android:layout_toRightOf="@+id/tv_projection"
+                android:paddingTop="@dimen/main_tv_paddingTop"
                 android:textColor="@color/grey"
-                android:textSize="15sp" />
+                android:textSize="@dimen/main_tv_textSize_small" />
 
             <ImageView
                 android:id="@+id/arrow_projection"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginStart="350dp"
-                android:layout_marginTop="15dp"
-                android:src="@drawable/arrow"/>
+                android:layout_width="@dimen/main_arrow_width"
+                android:layout_height="@dimen/main_arrow_height"
+                android:layout_marginStart="@dimen/main_arrow_marginStart"
+                android:layout_marginTop="@dimen/main_arrow_marginTop"
+                android:src="@drawable/arrow" />
         </RelativeLayout>
-
     </LinearLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
