--- a/app/src/main/res/layout/activity_size.xml
+++ b/app/src/main/res/layout/activity_size.xml
@@ -5,38 +5,40 @@
 
     <ImageView
         android:id="@+id/iv_size"
-        android:layout_width="550dp"
-        android:layout_height="310dp"
-        android:layout_marginTop="70dp"
-        android:layout_marginLeft="185dp"
-        android:src="@drawable/pic_size"/>
+        android:layout_width="@dimen/size_iv_width"
+        android:layout_height="@dimen/size_iv_height"
+        android:layout_marginTop="@dimen/size_iv_marginTop"
+        android:src="@drawable/pic_size"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"/>
 
     <SeekBar
         android:id="@+id/seekbar_level"
-        android:layout_width="300dp"
-        android:layout_height="30dp"
+        android:layout_width="@dimen/size_seek_width"
+        android:layout_height="@dimen/size_seek_height"
         android:layout_below="@+id/iv_size"
-        android:layout_marginLeft="300dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginLeft="@dimen/size_seek_marginLeft"
+        android:layout_marginTop="@dimen/size_seek_marginTop"
         android:max="10"
-        android:progress="1"
+        android:progress="0"
         android:focusable="true" />
 
     <TextView
         android:id="@+id/text_level"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="level:1"
-        android:textSize="30dp"
+        android:text="level:0"
+        android:textSize="@dimen/size_textLevel_textSize"
         android:textStyle="bold"
         android:layout_below="@+id/seekbar_level"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="400dp"/>
+        android:layout_marginTop="@dimen/size_textLevel_marginTop"
+        android:layout_marginLeft="@dimen/size_textLevel_marginLeft"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="左右键缩放尺寸"
         android:layout_below="@+id/text_level"
-        android:layout_marginLeft="400dp"
-        android:textStyle="bold"/>
+        android:layout_marginLeft="@dimen/size_text_marginLeft"
+        android:textStyle="bold"
+        android:textSize="@dimen/size_text_textSize"/>
 </RelativeLayout>
