--- a/app/src/main/res/layout/activity_trapezoidal_single_point.xml
+++ b/app/src/main/res/layout/activity_trapezoidal_single_point.xml
@@ -3,57 +3,102 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/activity_test">
+    android:background="@mipmap/trape_background">
     <ImageView
         android:id="@+id/iv_single_left_up"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="34dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginStart="@dimen/singlePoint_lu_marginStart"
+        android:layout_marginTop="@dimen/singlePoint_lu_marginTop"
         android:src="@drawable/trape_dot"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_single_left_up"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="0,0"
+        android:textSize="@dimen/single_tv_textSize"
+        android:layout_marginTop="@dimen/single_tv_margin"
+        android:layout_marginLeft="@dimen/single_tv_margin"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <ImageView
         android:id="@+id/iv_single_right_up"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="23dp"
-        android:src="@drawable/unselected"
+        android:layout_marginTop="@dimen/singlePoint_ru_marginTop"
+        android:layout_marginEnd="@dimen/singlePoint_ru_marginEnd"
+        android:src="@drawable/trape_dot"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_single_right_up"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="visible"
+        android:text="0,0"
+        android:textSize="@dimen/single_tv_textSize"
+        android:layout_marginTop="@dimen/single_tv_margin"
+        android:layout_marginEnd="@dimen/single_tv_margin"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
 
     <ImageView
         android:id="@+id/iv_single_left_down"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="34dp"
-        android:layout_marginBottom="24dp"
-        android:src="@drawable/unselected"
+        android:layout_marginStart="@dimen/singlePoint_ld_marginStart"
+        android:layout_marginBottom="@dimen/singlePoint_ld_marginBottom"
+        android:src="@drawable/trape_dot"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_single_left_down"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="visible"
+        android:text="0,0"
+        android:textSize="@dimen/single_tv_textSize"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginStart="@dimen/single_tv_margin"
+        android:layout_marginBottom="@dimen/single_tv_margin"/>
 
     <ImageView
         android:id="@+id/iv_single_right_down"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="22dp"
-        android:src="@drawable/unselected"
+        android:layout_marginEnd="@dimen/singlePoint_rd_marginEnd"
+        android:layout_marginBottom="@dimen/singlePoint_rd_marginBottom"
+        android:src="@drawable/trape_dot"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-
-
-    <ImageView
+    <TextView
+        android:id="@+id/tv_single_right_down"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="130dp"
-        android:layout_marginTop="70dp"
-        android:src="@drawable/pic_trape"
+        android:visibility="visible"
+        android:text="0,0"
+        android:textSize="@dimen/single_tv_textSize"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="@dimen/single_tv_margin"
+        android:layout_marginEnd="@dimen/single_tv_margin"/>
+
+    <ImageView
+        android:layout_width="@dimen/singlePoint_iv_width"
+        android:layout_height="@dimen/singlePoint_iv_height"
+        android:src="@mipmap/trape_tips"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
