[2023.6.13]第四次提交:1、调整部分UI适配外部康佳设置风格。2、替换梯形校正提示画面。

--- a/app/src/main/res/layout/activity_trapezoidal_single_point.xml
+++ b/app/src/main/res/layout/activity_trapezoidal_single_point.xml
@@ -95,7 +95,7 @@
     <ImageView
         android:layout_width="@dimen/singlePoint_iv_width"
         android:layout_height="@dimen/singlePoint_iv_height"
-        android:src="@mipmap/trape_tips"
+        android:src="@mipmap/trape_tips_single"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
