--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,12 +36,12 @@
 
         <RelativeLayout
             android:id="@+id/trapezoidal_double_point"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/main_RL_height"
             android:background="@drawable/test"
+            android:paddingEnd="@dimen/main_RL_paddingEnd"
             android:focusable="true"
-            android:gravity="center_vertical"
-            android:layout_weight="1">
+            android:gravity="center_vertical">
 
             <ImageView
                 android:id="@+id/iv_trapezoidal_double_point"
@@ -75,10 +75,11 @@
         <RelativeLayout
             android:id="@+id/trapezoidal_single_point"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
+            android:layout_height="@dimen/main_RL_height"
             android:background="@drawable/test"
             android:focusable="true"
-            android:layout_weight="1"
+            android:paddingEnd="@dimen/main_RL_paddingEnd"
+            android:gravity="center_vertical"
             android:layout_marginTop="@dimen/main_RL_marginTop">
 
             <ImageView
@@ -113,10 +114,11 @@
         <RelativeLayout
             android:id="@+id/size"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
+            android:layout_height="@dimen/main_RL_height"
             android:background="@drawable/test"
             android:focusable="true"
-            android:layout_weight="1"
+            android:paddingEnd="@dimen/main_RL_paddingEnd"
+            android:gravity="center_vertical"
             android:layout_marginTop="@dimen/main_RL_marginTop">
 
             <ImageView
@@ -151,10 +153,11 @@
         <RelativeLayout
             android:id="@+id/projection"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
+            android:layout_height="@dimen/main_RL_height"
             android:background="@drawable/test"
             android:focusable="true"
-            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:paddingEnd="@dimen/main_RL_paddingEnd"
             android:layout_marginTop="@dimen/main_RL_marginTop">
 
             <ImageView
@@ -185,7 +188,8 @@
                 android:layout_toRightOf="@+id/tv_projection"
                 android:paddingTop="@dimen/main_tv_paddingTop"
                 android:textColor="@color/grey"
-                android:textSize="@dimen/main_tv_textSize_small" />
+                android:textSize="@dimen/main_tv_textSize_small"
+                android:textStyle="bold" />
 
             <ImageView
                 android:id="@+id/arrow_projection"
