--- a/app/src/main/res/layout/activity_trapezoidal_double_point.xml
+++ b/app/src/main/res/layout/activity_trapezoidal_double_point.xml
@@ -8,57 +8,59 @@
 
     <ImageView
         android:id="@+id/iv_trapezoidal01"
-        android:layout_width="@dimen/doublePoint_iv_width"
-        android:layout_height="@dimen/doublePoint_iv_height"
+        android:layout_width="@dimen/singlePoint_iv_width"
+        android:layout_height="@dimen/singlePoint_iv_height"
         android:src="@mipmap/trape_tips"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:src="@mipmap/arrow_vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/double_arrow_vertical_marginLeft"
-        android:layout_marginBottom="@dimen/double_arrow_vertical_marginTop"
+    <RelativeLayout
+        android:id="@+id/double_RL"
+        android:layout_width="@dimen/double_RL_width"
+        android:layout_height="@dimen/double_RL_height"
+        android:layout_marginTop="@dimen/double_RL_marginTop"
+        android:gravity="center_horizontal"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/iv_trapezoidal01">
 
-    <TextView
-        android:id="@+id/tv_vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="0,0"
-        android:textSize="@dimen/size_textLevel_textSize"
-        android:layout_marginLeft="@dimen/double_tv_vertical_marginLeft"
-        android:layout_marginBottom="@dimen/double_tv_vertical_marginBottom"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/arrow_vertical"
+            android:paddingTop="@dimen/double_vertical_paddingTop" />
 
-    <ImageView
-        android:id="@+id/iv_arrow_horizontal"
-        android:src="@mipmap/arrow_horizontl"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/double_arrow_horizontal_marginLeft"
-        android:layout_marginBottom="@dimen/double_arrow_horizontal_marginBottom"
-        app:layout_constraintStart_toStartOf="@+id/tv_vertical"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        <TextView
+            android:id="@+id/tv_vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingStart="@dimen/double_tv_vertical_paddingStart"
+            android:paddingTop="@dimen/double_tv_vertical_paddingTop"
+            android:text="0,0"
+            android:textSize="@dimen/size_textLevel_textSize"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView
-        android:id="@+id/tv_horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/double_tv_horizontal_marginLeft"
-        android:layout_marginBottom="@dimen/double_tv_horizontal_marginBottom"
-        android:text="0,0"
-        android:textSize="@dimen/size_textLevel_textSize"
-        app:layout_constraintStart_toStartOf="@+id/iv_arrow_horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        <ImageView
+            android:id="@+id/iv_arrow_horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingStart="@dimen/double_horizontal_paddingStart"
+            android:paddingTop="@dimen/double_horizontal_paddingTop"
+            android:src="@mipmap/arrow_horizont" />
 
+        <TextView
+            android:id="@+id/tv_horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingStart="@dimen/double_tv_horizontal_paddingStart"
+            android:paddingTop="@dimen/double_tv_horizontal_paddingTop"
+            android:text="0,0"
+            android:textSize="@dimen/size_textLevel_textSize"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/iv_arrow_horizontal" />
 
-
-
-
+    </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
