--- a/app/src/main/res/values-1024x600/dimens.xml
+++ b/app/src/main/res/values-1024x600/dimens.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="main_title_textSize">100sp</dimen>
-    <dimen name="main_tv_textSize">20sp</dimen>
+    <dimen name="main_title_textSize">40sp</dimen>
+    <dimen name="main_tv_textSize">40sp</dimen>
+    <dimen name="main_RL_height">85dp</dimen>
     <dimen name="main_title_marginTop">50dp</dimen>
-    <dimen name="projection_title_textSize">50sp</dimen>
-    <dimen name="main_tv_textSize_small">20sp</dimen>
+    <dimen name="projection_title_textSize">40sp</dimen>
+    <dimen name="main_tv_textSize_small">25sp</dimen>
+    <dimen name="double_vertical_paddingTop">50dp</dimen>
+    <dimen name="double_tv_vertical_paddingStart">75dp</dimen>
+    <dimen name="double_tv_vertical_paddingTop">13dp</dimen>
+    <dimen name="double_horizontal_paddingStart">180dp</dimen>
+    <dimen name="double_horizontal_paddingTop">40dp</dimen>
+    <dimen name="double_tv_horizontal_paddingStart">230dp</dimen>
+    <dimen name="double_tv_horizontal_paddingTop">15dp</dimen>
     <dimen name="doublePoint_iv_width">700dp</dimen>
     <dimen name="doublePoint_iv_height">450dp</dimen>
     <dimen name="doublePoint_iv_marginStart">60dp</dimen>
@@ -17,14 +25,14 @@
     <dimen name="singlePoint_ld_marginBottom">65dp</dimen>
     <dimen name="singlePoint_rd_marginEnd">60dp</dimen>
     <dimen name="singlePoint_rd_marginBottom">65dp</dimen>
-    <dimen name="singlePoint_iv_width">650dp</dimen>
-    <dimen name="singlePoint_iv_height">350dp</dimen>
+    <dimen name="singlePoint_iv_width">1000dp</dimen>
+    <dimen name="singlePoint_iv_height">500dp</dimen>
     <dimen name="singlePoint_iv_marginStart">60dp</dimen>
     <dimen name="singlePoint_iv_marginTop">50dp</dimen>
     <dimen name="size_iv_width">650dp</dimen>
-    <dimen name="projection_RL_width">500dp</dimen>
+    <dimen name="projection_RL_width">900dp</dimen>
     <dimen name="projection_RL_marginTop">20dp</dimen>
-    <dimen name="main_arrow_marginStart">350dp</dimen>
+    <dimen name="main_arrow_marginStart">850dp</dimen>
     <dimen name="size_textLevel_marginLeft">430dp</dimen>
     <dimen name="size_text_marginLeft">440dp</dimen>
     <dimen name="size_text_textSize">20sp</dimen>
@@ -40,10 +48,10 @@
     <dimen name="size_iv_marginLeft">200dp</dimen>
     <dimen name="dp140">140dp</dimen>
     <dimen name="main_iv_width">120dp</dimen>
-    <dimen name="main_tv_marginLeft">70dp</dimen>
+    <dimen name="main_tv_marginLeft">370dp</dimen>
     <dimen name="size_iv_marginTop">70dp</dimen>
-    <dimen name="projection_RL_height">80dp</dimen>
-    <dimen name="projection_tv_height">80dp</dimen>
+    <dimen name="projection_RL_height">85dp</dimen>
+    <dimen name="projection_tv_height">85dp</dimen>
     <dimen name="main_iv_height">70dp</dimen>
     <dimen name="main_tv_height">70dp</dimen>
     <dimen name="main_arrow_width">30dp</dimen>
@@ -58,18 +66,18 @@
     <dimen name="projection_title_marginTop">50dp</dimen>
     <dimen name="main_tv_paddingTop">19dp</dimen>
     <dimen name="main_arrow_marginTop">20dp</dimen>
-    <dimen name="projection_tv_paddingTop">12dp</dimen>
+    <dimen name="projection_tv_paddingTop">20dp</dimen>
     <dimen name="projection_tv_textSize">30sp</dimen>
     <dimen name="projection_tv_marginLeft">20dp</dimen>
-    <dimen name="projection_iv_width">30dp</dimen>
-    <dimen name="projection_iv_height">30dp</dimen>
-    <dimen name="projection_iv_marginStart">450dp</dimen>
+    <dimen name="projection_iv_width">35dp</dimen>
+    <dimen name="projection_iv_height">35dp</dimen>
+    <dimen name="projection_iv_marginStart">850dp</dimen>
     <dimen name="projection_iv_marginTop">25dp</dimen>
     <dimen name="main_RL_marginTop">20dp</dimen>
     <dimen name="main_iv_marginTop">5dp</dimen>
     <dimen name="doublePoint_lu_marginStart">30dp</dimen>
-    <dimen name="double_arrow_vertical_marginLeft">320dp</dimen>
-    <dimen name="double_arrow_vertical_marginTop">25dp</dimen>
+    <dimen name="double_arrow_vertical_marginLeft">20dp</dimen>
+    <dimen name="double_arrow_vertical_marginTop">15dp</dimen>
     <dimen name="double_tv_vertical_marginLeft">400dp</dimen>
     <dimen name="double_tv_vertical_marginBottom">5dp</dimen>
     <dimen name="double_arrow_horizontal_marginLeft">100dp</dimen>
