--- a/app/src/main/res/values-1920x1080/dimens.xml
+++ b/app/src/main/res/values-1920x1080/dimens.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="main_title_textSize">50sp</dimen>
+    <dimen name="main_title_textSize">30sp</dimen>
     <dimen name="main_tv_textSize">20sp</dimen>
-    <dimen name="main_title_marginTop">50dp</dimen>
+    <dimen name="main_RL_height">70dp</dimen>
+    <dimen name="main_title_marginTop">30dp</dimen>
     <dimen name="projection_title_textSize">40sp</dimen>
     <dimen name="main_tv_textSize_small">15sp</dimen>
+    <dimen name="double_vertical_paddingTop">23dp</dimen>
+    <dimen name="double_tv_vertical_paddingStart">75dp</dimen>
+    <dimen name="double_tv_vertical_paddingTop">13dp</dimen>
+    <dimen name="double_horizontal_paddingStart">180dp</dimen>
+    <dimen name="double_horizontal_paddingTop">20dp</dimen>
+    <dimen name="double_tv_horizontal_paddingStart">230dp</dimen>
+    <dimen name="double_tv_horizontal_paddingTop">15dp</dimen>
     <dimen name="doublePoint_iv_width">845dp</dimen>
     <dimen name="doublePoint_iv_height">380dp</dimen>
     <dimen name="doublePoint_iv_marginStart">60dp</dimen>
@@ -22,9 +30,9 @@
     <dimen name="singlePoint_iv_marginStart">80dp</dimen>
     <dimen name="singlePoint_iv_marginTop">70dp</dimen>
     <dimen name="size_iv_width">500dp</dimen>
-    <dimen name="projection_RL_width">400dp</dimen>
+    <dimen name="projection_RL_width">800dp</dimen>
     <dimen name="projection_RL_marginTop">20dp</dimen>
-    <dimen name="main_arrow_marginStart">350dp</dimen>
+    <dimen name="main_arrow_marginStart">650dp</dimen>
     <dimen name="size_textLevel_marginLeft">430dp</dimen>
     <dimen name="size_text_marginLeft">425dp</dimen>
     <dimen name="size_seek_width">350dp</dimen>
@@ -39,7 +47,7 @@
     <dimen name="size_iv_marginLeft">220dp</dimen>
     <dimen name="dp140">140dp</dimen>
     <dimen name="main_iv_width">100dp</dimen>
-    <dimen name="main_tv_marginLeft">90dp</dimen>
+    <dimen name="main_tv_marginLeft">390dp</dimen>
     <dimen name="size_iv_marginTop">70dp</dimen>
     <dimen name="size_text_textSize">20sp</dimen>
     <dimen name="projection_RL_height">60dp</dimen>
@@ -63,13 +71,13 @@
     <dimen name="projection_tv_marginLeft">20dp</dimen>
     <dimen name="projection_iv_width">30dp</dimen>
     <dimen name="projection_iv_height">30dp</dimen>
-    <dimen name="projection_iv_marginStart">350dp</dimen>
+    <dimen name="projection_iv_marginStart">750dp</dimen>
     <dimen name="projection_iv_marginTop">15dp</dimen>
-    <dimen name="main_RL_marginTop">20dp</dimen>
+    <dimen name="main_RL_marginTop">15dp</dimen>
     <dimen name="main_iv_marginTop">5dp</dimen>
     <dimen name="doublePoint_lu_marginStart">33dp</dimen>
-    <dimen name="double_arrow_vertical_marginLeft">300dp</dimen>
-    <dimen name="double_arrow_vertical_marginTop">15dp</dimen>
+    <dimen name="double_arrow_vertical_marginLeft">30dp</dimen>
+    <dimen name="double_arrow_vertical_marginTop">25dp</dimen>
     <dimen name="double_tv_vertical_marginLeft">380dp</dimen>
     <dimen name="double_tv_vertical_marginBottom">5dp</dimen>
     <dimen name="double_arrow_horizontal_marginLeft">100dp</dimen>
