--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,7 +3,15 @@
     <dimen name="main_title_textSize">30sp</dimen>
     <dimen name="main_title_marginTop">50dp</dimen>
     <dimen name="main_tv_textSize">20sp</dimen>
+    <dimen name="main_RL_height">85dp</dimen>
     <dimen name="projection_title_textSize">30sp</dimen>
+    <dimen name="double_vertical_paddingTop">50dp</dimen>
+    <dimen name="double_tv_vertical_paddingStart">75dp</dimen>
+    <dimen name="double_tv_vertical_paddingTop">13dp</dimen>
+    <dimen name="double_horizontal_paddingStart">180dp</dimen>
+    <dimen name="double_horizontal_paddingTop">40dp</dimen>
+    <dimen name="double_tv_horizontal_paddingStart">230dp</dimen>
+    <dimen name="double_tv_horizontal_paddingTop">15dp</dimen>
     <dimen name="main_tv_textSize_small">15sp</dimen>
     <dimen name="doublePoint_iv_width">600dp</dimen>
     <dimen name="doublePoint_iv_height">350dp</dimen>
