--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,16 +7,25 @@
     tools:context=".MainActivity"
     android:background="#FFFFFF">
 
+    <ImageView
+        android:layout_width="@dimen/main_title_arrow_width"
+        android:layout_height="@dimen/main_title_arrow_height"
+        android:src="@drawable/arrow_back"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="@dimen/main_title_arrow_marginStart"
+        android:layout_marginTop="@dimen/main_title_arrow_marginTop"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <!--首页标题-->
     <TextView
         android:id="@+id/tvtitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
         android:text="投影设置"
         android:textColor="@color/black"
         android:textSize="@dimen/main_title_textSize"
-        android:textStyle="bold"
+        android:textStyle="normal"
+        android:layout_marginStart="@dimen/main_title_marginStart"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="@dimen/main_title_marginTop"/>
@@ -64,7 +73,7 @@
                 android:text="两点梯形校正"
                 android:textColor="@color/black"
                 android:textSize="@dimen/main_tv_textSize"
-                android:textStyle="bold" />
+                android:textStyle="normal" />
 
             <ImageView
                 android:id="@+id/arrow_trapezoidal_double_point"
@@ -103,7 +112,7 @@
                 android:text="四点梯形校正"
                 android:textColor="@color/black"
                 android:textSize="@dimen/main_tv_textSize"
-                android:textStyle="bold" />
+                android:textStyle="normal" />
 
             <ImageView
                 android:id="@+id/arrow_trapezoidal_single_point"
@@ -143,7 +152,7 @@
                 android:text="尺寸调节"
                 android:textColor="@color/black"
                 android:textSize="@dimen/main_tv_textSize"
-                android:textStyle="bold" />
+                android:textStyle="normal" />
 
             <ImageView
                 android:id="@+id/arrow_size"
@@ -183,7 +192,7 @@
                 android:text="投影方式"
                 android:textColor="@color/black"
                 android:textSize="@dimen/main_tv_textSize"
-                android:textStyle="bold" />
+                android:textStyle="normal" />
 
             <TextView
                 android:id="@+id/tv_projection_small"
@@ -194,7 +203,7 @@
                 android:paddingTop="@dimen/main_tv_paddingTop"
                 android:textColor="@color/grey"
                 android:textSize="@dimen/main_tv_textSize_small"
-                android:textStyle="bold" />
+                android:textStyle="normal" />
 
             <ImageView
                 android:id="@+id/arrow_projection"
