--- a/app/src/main/res/layout/activity_projeciton.xml
+++ b/app/src/main/res/layout/activity_projeciton.xml
@@ -4,6 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:layout_width="@dimen/projection_title_arrow_width"
+        android:layout_height="@dimen/projection_title_arrow_height"
+        android:src="@drawable/arrow_back"
+        android:layout_marginStart="@dimen/projection_title_arrow_marginStart"
+        android:layout_marginTop="@dimen/projection_title_arrow_marginTop" />
+
     <!--投影方式 二级菜单 标题-->
     <TextView
         android:id="@+id/title_projection"
@@ -12,9 +19,9 @@
         android:layout_marginTop="@dimen/projection_title_marginTop"
         android:text="投影方式"
         android:textColor="@color/black"
+        android:layout_marginStart="@dimen/projection_title_marginStart"
         android:textSize="@dimen/projection_title_textSize"
-        android:textStyle="bold"
-        android:gravity="center"/>
+        android:textStyle="normal" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -42,7 +49,7 @@
                 android:text="正装正投"
                 android:textColor="@color/black"
                 android:textSize="@dimen/projection_tv_textSize"
-                android:textStyle="bold" />
+                android:textStyle="normal" />
 
             <ImageView
                 android:id="@+id/sel_pos_pos"
@@ -70,7 +77,7 @@
                 android:text="正装背投"
                 android:textColor="@color/black"
                 android:textSize="@dimen/projection_tv_textSize"
-                android:textStyle="bold" />
+                android:textStyle="normal" />
 
             <ImageView
                 android:id="@+id/sel_pos_neg"
@@ -98,7 +105,7 @@
                 android:text="吊装正投"
                 android:textColor="@color/black"
                 android:textSize="@dimen/projection_tv_textSize"
-                android:textStyle="bold" />
+                android:textStyle="normal" />
 
             <ImageView
                 android:id="@+id/sel_neg_pos"
@@ -126,7 +133,7 @@
                 android:text="吊装背投"
                 android:textColor="@color/black"
                 android:textSize="@dimen/projection_tv_textSize"
-                android:textStyle="bold" />
+                android:textStyle="normal" />
 
             <ImageView
                 android:id="@+id/sel_neg_neg"
