--- a/app/src/main/res/values-1024x600/dimens.xml
+++ b/app/src/main/res/values-1024x600/dimens.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="main_title_textSize">40sp</dimen>
-    <dimen name="main_tv_textSize">40sp</dimen>
-    <dimen name="main_RL_height">85dp</dimen>
+    <dimen name="main_title_textSize">25sp</dimen>
+    <dimen name="main_tv_textSize">25sp</dimen>
+    <dimen name="main_title_marginStart">100dp</dimen>
+    <dimen name="main_RL_height">70dp</dimen>
     <dimen name="main_title_marginTop">50dp</dimen>
-    <dimen name="projection_title_textSize">40sp</dimen>
+    <dimen name="main_title_arrow_width">25dp</dimen>
+    <dimen name="main_title_arrow_height">25dp</dimen>
+    <dimen name="main_title_arrow_marginStart">75dp</dimen>
+    <dimen name="main_title_arrow_marginTop">55dp</dimen>
+    <dimen name="projection_title_textSize">25sp</dimen>
     <dimen name="main_tv_textSize_small">25sp</dimen>
     <dimen name="double_vertical_paddingTop">50dp</dimen>
     <dimen name="double_tv_vertical_paddingStart">75dp</dimen>
@@ -31,7 +36,7 @@
     <dimen name="singlePoint_iv_marginTop">50dp</dimen>
     <dimen name="size_iv_width">650dp</dimen>
     <dimen name="projection_RL_width">900dp</dimen>
-    <dimen name="projection_RL_marginTop">20dp</dimen>
+    <dimen name="projection_RL_marginTop">25dp</dimen>
     <dimen name="main_arrow_marginStart">850dp</dimen>
     <dimen name="size_textLevel_marginLeft">430dp</dimen>
     <dimen name="size_text_marginLeft">440dp</dimen>
@@ -47,12 +52,12 @@
     <dimen name="projection_LL_marginTop">160dp</dimen>
     <dimen name="size_iv_marginLeft">200dp</dimen>
     <dimen name="dp140">140dp</dimen>
-    <dimen name="main_iv_width">120dp</dimen>
-    <dimen name="main_tv_marginLeft">370dp</dimen>
+    <dimen name="main_iv_width">100dp</dimen>
+    <dimen name="main_tv_marginLeft">500dp</dimen>
     <dimen name="size_iv_marginTop">70dp</dimen>
-    <dimen name="projection_RL_height">85dp</dimen>
+    <dimen name="projection_RL_height">70dp</dimen>
     <dimen name="projection_tv_height">85dp</dimen>
-    <dimen name="main_iv_height">70dp</dimen>
+    <dimen name="main_iv_height">50dp</dimen>
     <dimen name="main_tv_height">70dp</dimen>
     <dimen name="main_arrow_width">30dp</dimen>
     <dimen name="main_arrow_height">30dp</dimen>
@@ -67,14 +72,18 @@
     <dimen name="main_tv_paddingTop">19dp</dimen>
     <dimen name="main_arrow_marginTop">20dp</dimen>
     <dimen name="projection_tv_paddingTop">20dp</dimen>
-    <dimen name="projection_tv_textSize">30sp</dimen>
+    <dimen name="projection_tv_textSize">25sp</dimen>
     <dimen name="projection_tv_marginLeft">20dp</dimen>
     <dimen name="projection_iv_width">35dp</dimen>
     <dimen name="projection_iv_height">35dp</dimen>
     <dimen name="projection_iv_marginStart">850dp</dimen>
-    <dimen name="projection_iv_marginTop">25dp</dimen>
-    <dimen name="main_RL_marginTop">20dp</dimen>
-    <dimen name="main_iv_marginTop">5dp</dimen>
+    <dimen name="projection_iv_marginTop">20dp</dimen>
+    <dimen name="projection_title_arrow_width">25dp</dimen>
+    <dimen name="projection_title_arrow_height">25dp</dimen>
+    <dimen name="projection_title_arrow_marginStart">75dp</dimen>
+    <dimen name="projection_title_arrow_marginTop">55dp</dimen>
+    <dimen name="main_RL_marginTop">25dp</dimen>
+    <dimen name="main_iv_marginTop">10dp</dimen>
     <dimen name="doublePoint_lu_marginStart">30dp</dimen>
     <dimen name="double_arrow_vertical_marginLeft">20dp</dimen>
     <dimen name="double_arrow_vertical_marginTop">15dp</dimen>
