--- a/app/src/main/res/layout/activity_trapezoidal_double_point.xml
+++ b/app/src/main/res/layout/activity_trapezoidal_double_point.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/trape_background">
+    android:background="?attr/projection_bg">
 
     <!--提示图片 居中显示-->
     <ImageView
@@ -31,7 +31,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@mipmap/arrow_vertical"
+            android:src="?attr/arrow_vertical"
             android:paddingTop="@dimen/double_vertical_paddingTop" />
 
         <TextView
@@ -51,7 +51,7 @@
             android:layout_height="wrap_content"
             android:paddingStart="@dimen/double_horizontal_paddingStart"
             android:paddingTop="@dimen/double_horizontal_paddingTop"
-            android:src="@mipmap/arrow_horizont" />
+            android:src="?attr/arrow_horizontal" />
 
         <TextView
             android:id="@+id/tv_horizontal"
