--- a/app/src/main/res/layout/activity_trapezoidal_single_point.xml
+++ b/app/src/main/res/layout/activity_trapezoidal_single_point.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/trape_background">
+    android:background="?attr/projection_bg">
     <!--左上角-->
     <ImageView
         android:id="@+id/iv_single_left_up"
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/singlePoint_lu_marginStart"
         android:layout_marginTop="@dimen/singlePoint_lu_marginTop"
-        android:src="@drawable/trape_dot"
+        android:src="?attr/trape_dots"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -33,7 +33,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/singlePoint_ru_marginTop"
         android:layout_marginEnd="@dimen/singlePoint_ru_marginEnd"
-        android:src="@drawable/trape_dot"
+        android:src="?attr/trape_dots"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -56,7 +56,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/singlePoint_ld_marginStart"
         android:layout_marginBottom="@dimen/singlePoint_ld_marginBottom"
-        android:src="@drawable/trape_dot"
+        android:src="?attr/trape_dots"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -79,7 +79,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/singlePoint_rd_marginEnd"
         android:layout_marginBottom="@dimen/singlePoint_rd_marginBottom"
-        android:src="@drawable/trape_dot"
+        android:src="?attr/trape_dots"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
